--- a/xCourse/xCourse/xCourse.csproj
+++ b/xCourse/xCourse/xCourse.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.9" />
+    <PackageReference Include="Npm" Version="3.5.2" />
   </ItemGroup>
 
 </Project>
